--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,3 +34,4 @@ whoami = "1.4.1"
 [dev-dependencies]
 tokio = { version = "1.36.0", features = ["macros"] }
 dotenv = "0.15.0"
+uuid= { version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
